Deployment/server/kubernetes/gke/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: managed-cert
    kubernetes.io/ingress.global-static-ip-name: "thinkmay-ip"
spec:
  rules:
  - host: hostdev.thinkmay.net
    http:
      paths:
      - path: /User/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: conductor
            port:
              number: 80
      - path: /Session/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: conductor
            port:
              number: 80
      - path: /Device/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: conductor
            port:
              number: 80
      - path: /Shell/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: conductor
            port:
              number: 80

      - path: /Account/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: authenticator
            port:
              number: 80
  
      - path: /Handshake/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: signalling
            port:
              number: 80

      - path: /Agent/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: slavemanager
            port:
              number: 80

      - path: /Metric/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: metric-collector
            port:
              number: 80

  - host: thinkmay.net
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: landing-page
            port:
              number: 80

  - host: servicedev.thinkmay.net
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: service-page
            port:
              number: 80

  - host: admindev.thinkmay.net
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: admin-page
            port:
              number: 80
